# shields-api

./: Cargo.toml  README.md  build.rs
src/: main.rs  render.rs
src/services/: codeberg.rs  crates_io.rs  github.rs  mod.rs  npm.rs  pypi.rs  statik.rs
